--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@graphql-codegen/typescript-urql": "^3.4.1",
+    "@urql/exchange-graphcache": "^4.3.6",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "graphql": "^16.2.0",
