--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.0.0",
@@ -17,6 +18,7 @@
     "framer-motion": "^4.0.3",
     "graphql": "^16.2.0",
     "next": "latest",
+    "next-apollo": "^5.0.8",
     "next-urql": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +29,7 @@
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/typescript": "2.4.1",
     "@graphql-codegen/typescript-operations": "2.2.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.4",
     "typescript": "^4.5.4"
   }
 }
